--- a/src/css/app.styl
+++ b/src/css/app.styl
@@ -3,7 +3,7 @@
 	box-sizing: border-box;
 }
 body {
-	font-family: "Comfortaa", sans-serif;
+	font-family: "Roboto", sans-serif;
 }
 
 .explanation {
