--- a/static/css/default.css
+++ b/static/css/default.css
@@ -46,7 +46,7 @@ having to override as much.
 .theme-default .cv-event {
 	border-color: #e0e0f0;
 	border-radius: 0.5em;
-	background-color: #e7e7ff;
+	background-color: #FAF1D6;
 	text-overflow: ellipsis;
 }
 
