register button work with perfect case

--- a/src/css/quasar.variables.styl
+++ b/src/css/quasar.variables.styl
@@ -10,7 +10,7 @@
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
 $primary   = #fa928f
-$secondary = #26A69A
+$secondary = #ffeeef
 $accent    = #9C27B0
 
 $positive  = #21BA45
