profile and delete logout button

--- a/src/css/app.styl
+++ b/src/css/app.styl
@@ -3,7 +3,8 @@
 	box-sizing: border-box;
 }
 body {
-	font-family: "Roboto", sans-serif;
+	font-family: "Roboto";
+	// sans-serif;
 }
 
 .explanation {
