--- a/src/css/quasar.variables.styl
+++ b/src/css/quasar.variables.styl
@@ -16,6 +16,5 @@ $accent    = #9C27B0
 $positive  = #21BA45
 $negative  = #C10015
 $info      = #31CCEC
-$warning   = #F2C037
+$warning   = #CD9B61
 $jui       = #FEE9E8
-
