--- a/src/css/quasar.variables.styl
+++ b/src/css/quasar.variables.styl
@@ -11,7 +11,7 @@
 
 $primary   = #fa928f
 $secondary = #ffeeef
-$accent    = #9C27B0
+$accent    = #ffc7cb
 
 $positive  = #21BA45
 $negative  = #C10015
