change notify color

--- a/src/css/quasar.variables.styl
+++ b/src/css/quasar.variables.styl
@@ -13,7 +13,7 @@ $primary   = #fa928f
 $secondary = #ffeeef
 $accent    = #ffc7cb
 
-$positive  = #21BA45
+$positive  = #bffa8f
 $negative  = #C10015
 $info      = #31CCEC
 $warning   = #CD9B61
